--- a/Calendar.html
+++ b/Calendar.html
@@ -83,24 +83,6 @@
     <div class="row content">  
 
         <div class="col-md-4 show-2">
-            <img src="images/Wanda.PNG" style="width: 100%" alt="Responsive image">
-            <h2>Wanda Johnson</h2>
-            <h3>August 22nd, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $12</h3>
-            <a href="https://www.eventbrite.com/e/an-evening-with-wanda-johnson-tickets-1407567314729?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-        <div class="col-md-4 show-2">
-            <img src="images/Matches.PNG" style="width: 100%" alt="Responsive image">
-            <h2>Brand New Box of Matches</h2>
-            <h3>August 23rd, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $10</h3>
-            <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-tickets-1407870351119?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-        <div class="col-md-4 show-2">
             <img src="images/Goldpine 083125 (1).png" style="width: 100%" alt="Responsive image">
             <h2>Goldpine</h2>
             <h2>Grits Meal w/ Ticket Add On</h2>
@@ -110,11 +92,7 @@
             <a href="https://goldpine.thrivecart.com/83125-goldpine-honea-path-fiddle-and-bow/?fbclid=IwY2xjawLpqWNleHRuA2FlbQIxMABicmlkETFhajJzWmFRSUw3QW9BaHNRAR70INIZ2kDscqW2Q1gxLf49g7lk9wqTbtkyHXfc3OoJyNK9NXErKRobtyJV3g_aem_5enoE2rYG7uTiniZB7nm1A" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
-    </div>
-
-    <div class="row content"> 
-
-         <div class="col-md-4 show-2">
+          <div class="col-md-4 show-2">
             <img src="images/Pettis & Hinkle 090725.png" style="width: 100%" alt="Responsive image">
             <h2>Grace Pettis & Anya Hinkle</h2>
             <h3>September 7th, 2025</h3>
@@ -132,6 +110,10 @@
             <a href="https://www.eventbrite.com/e/country-music-royalty-tess-frizzell-w-bobby-tomberlin-tickets-1363767718959?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
+    </div>
+
+    <div class="row content"> 
+
            <div class="col-md-4 show-1">
             <img src="images/Brian and Melanie 091825.png" style="width: 100%" alt="Responsive image">
             <h2>Brian Ashley Jones & Melanie Jean</h2>
@@ -141,11 +123,16 @@
             <a href="https://www.eventbrite.com/e/an-evening-with-brian-ashley-jones-and-melanie-jean-tickets-1221658496449?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
-    </div>
+         <div class="col-md-4 show-1">
+            <img src="images/Darian Poe.png" style="width: 100%" alt="Responsive image">
+            <h2>Darian Poe</h2>
+            <h3>September 19th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $10</h3>
+            <a href="https://www.eventbrite.com/e/darian-poe-tickets-1626855882739?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
 
-<div class="row content">
-
-        <div class="col-md-4 show-2">
+         <div class="col-md-4 show-2">
             <img src="images/Country River Band.png" style="width: 100%" alt="Responsive image">
             <h2>Country River Band</h2>
             <h3>October 25th, 2025</h3>
@@ -153,6 +140,10 @@
             <h3>Tickets $12</h3>
             <a href="https://www.eventbrite.com/e/country-river-band-tickets-1354260211749?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
+
+    </div>
+
+<div class="row content">
 
         <div class="col-md-4 show-2">
             <img src="images/Childers 110825.jpg" style="width: 100%" alt="Responsive image">
@@ -173,17 +164,26 @@
             <a href="https://www.eventbrite.com/e/pickens-creek-band-tickets-1407880110309?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
-    </div>
-
-<div class="row content">
-
-         <div class="col-md-4 show-2">
+    <div class="col-md-4 show-2">
             <img src="images/Tugalo 111425.jpg" style="width: 100%" alt="Responsive image">
             <h2>Tugalo Holler</h2>
             <h3>November 14th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $15</h3>
             <a href="https://www.eventbrite.com/e/tugalo-holler-tickets-1411263179159?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+    </div>
+
+<div class="row content">
+
+         <div class="col-md-4 show-2">
+            <img src="images/Lowedermilk 121325.png" style="width: 100%" alt="Responsive image">
+            <h2>The Edgar Loudermilk Band</h2>
+            <h3>November 14th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3>
+            <a href="https://www.eventbrite.com/e/award-winning-bluegrass-with-the-edgar-loudermilk-band-tickets-1626861178579?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
       <div class="col-md-4 show-3">
