--- a/Contact.html
+++ b/Contact.html
@@ -109,21 +109,22 @@
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
         <div class="col-md-4 show-1">
-            <img src="images/Wanda.PNG" style="width: 100%" alt="Responsive image">
-            <h2>Wanda Johnson</h2>
-            <h3>August 22nd, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $12</h3>
-            <a href="https://www.eventbrite.com/e/an-evening-with-wanda-johnson-tickets-1407567314729?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+            <img src="images/Goldpine 083125 (1).png" style="width: 100%" alt="Responsive image">
+            <h2>Goldpine</h2>
+            <h2>Grits Meal w/ Ticket Add On</h2>
+            <h3>August 31st, 2025</h3>
+            <h3>Red Door 2PM | Show 3PM</h3>
+            <h3>Tickets $20</h3>
+            <a href="https://goldpine.thrivecart.com/83125-goldpine-honea-path-fiddle-and-bow/?fbclid=IwY2xjawLpqWNleHRuA2FlbQIxMABicmlkETFhajJzWmFRSUw3QW9BaHNRAR70INIZ2kDscqW2Q1gxLf49g7lk9wqTbtkyHXfc3OoJyNK9NXErKRobtyJV3g_aem_5enoE2rYG7uTiniZB7nm1A" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
-        <div class="col-md-4 show-2">
-            <img src="images/Matches.PNG" style="width: 100%" alt="Responsive image">
-            <h2>Brand New Box of Matches</h2>
-            <h3>August 23rd, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $10</h3>
-            <a href="https://www.eventbrite.com/e/brand-new-box-of-matches-tickets-1407870351119?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+          <div class="col-md-4 show-2">
+            <img src="images/Pettis & Hinkle 090725.png" style="width: 100%" alt="Responsive image">
+            <h2>Grace Pettis & Anya Hinkle</h2>
+            <h3>September 7th, 2025</h3>
+            <h3>Red Door 2PM | Show 3PM</h3>
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/an-afternoon-with-grace-pettis-anya-hinkle-tickets-1363733095399?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
