--- a/Store.html
+++ b/Store.html
@@ -93,24 +93,23 @@
       <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
       <div class="row">
         
-          <div class="col-md-4 show-1">
-            <img src="images/Goldpine 083125 (1).png" style="width: 100%" alt="Responsive image">
-            <h2>Goldpine</h2>
-            <h2>Grits Meal w/ Ticket Add On</h2>
-            <h3>August 31st, 2025</h3>
-            <h3>Red Door 2PM | Show 3PM</h3>
+         <div class="col-md-4 show-1">
+            <img src="images/Frizzell 091325.png" style="width: 100%" alt="Responsive image">
+            <h2>Tess Frizzell & Bobby Tomberlin</h2>
+            <h3>September 13th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $20</h3>
-            <a href="https://goldpine.thrivecart.com/83125-goldpine-honea-path-fiddle-and-bow/?fbclid=IwY2xjawLpqWNleHRuA2FlbQIxMABicmlkETFhajJzWmFRSUw3QW9BaHNRAR70INIZ2kDscqW2Q1gxLf49g7lk9wqTbtkyHXfc3OoJyNK9NXErKRobtyJV3g_aem_5enoE2rYG7uTiniZB7nm1A" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
+            <a href="https://www.eventbrite.com/e/country-music-royalty-tess-frizzell-w-bobby-tomberlin-tickets-1363767718959?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
 
-          <div class="col-md-4 show-2">
-            <img src="images/Pettis & Hinkle 090725.png" style="width: 100%" alt="Responsive image">
-            <h2>Grace Pettis & Anya Hinkle</h2>
-            <h3>September 7th, 2025</h3>
-            <h3>Red Door 2PM | Show 3PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/an-afternoon-with-grace-pettis-anya-hinkle-tickets-1363733095399?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
+           <div class="col-md-4 show-2">
+            <img src="images/Brian and Melanie 091825.png" style="width: 100%" alt="Responsive image">
+            <h2>Brian Ashley Jones & Melanie Jean</h2>
+            <h3>September 18th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $10</h3>
+            <a href="https://www.eventbrite.com/e/an-evening-with-brian-ashley-jones-and-melanie-jean-tickets-1221658496449?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
         
           <div class="col-sm-4 never-know">
             <div class="">
