--- a/Calendar.html
+++ b/Calendar.html
@@ -82,15 +82,6 @@
 
     <div class="row content"> 
 
-          <div class="col-md-4 show-3">
-            <img src="images/Frizzell 091325.png" style="width: 100%" alt="Responsive image">
-            <h2>Tess Frizzell & Bobby Tomberlin</h2>
-            <h3>September 13th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/country-music-royalty-tess-frizzell-w-bobby-tomberlin-tickets-1363767718959?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-         </div>
-
            <div class="col-md-4 show-1">
             <img src="images/Brian and Melanie 091825.png" style="width: 100%" alt="Responsive image">
             <h2>Brian Ashley Jones & Melanie Jean</h2>
@@ -108,6 +99,15 @@
             <h3>Tickets $5</h3>
             <a href="https://www.eventbrite.com/e/darian-poe-tickets-1626855882739?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
+
+          <div class="col-md-4 show-2">
+            <img src="images/Country River Band.png" style="width: 100%" alt="Responsive image">
+            <h2>Colby T. Helms & The Virginia Creepers</h2>
+            <h3>October 18th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/colby-t-helms-and-the-virginia-creepers-tickets-1689585799609?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
 
     </div>
 
@@ -146,7 +146,6 @@
 
 <div class="row content">
 
-
     <div class="col-md-4 show-2">
             <img src="images/Tugalo 111425.jpg" style="width: 100%" alt="Responsive image">
             <h2>Tugalo Holler</h2>
@@ -154,6 +153,15 @@
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $15</h3>
             <a href="https://www.eventbrite.com/e/tugalo-holler-tickets-1411263179159?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+    <div class="col-md-4 show-2">
+            <img src="images/Lowedermilk 121325.png" style="width: 100%" alt="Responsive image">
+            <h2>Casey Chesnutt</h2>
+            <h3>November 22nd, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $30</h3>
+            <a href="https://www.eventbrite.com/e/casey-chesnutt-an-evening-w-country-music-royalty-tickets-1689647243389?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
       <div class="col-md-4 show-2">
@@ -165,12 +173,15 @@
             <a href="https://www.eventbrite.com/e/award-winning-bluegrass-with-the-edgar-loudermilk-band-tickets-1626861178579?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
+    <div class="row content">
+
       <div class="col-md-4 show-3">
             <h2>Your Band Could Be Up Next!</h2>
             <p>If you are interested in getting on stage at The Fiddle and Bow Music Hall, you can contact us <a class="link-opacity-100-hover" href="Contact.html">here.</a> If you have questions, you can go to our FAQ page <a class="link-opacity-100-hover" href="FAQ.html">here</a> and learn more. It is our mission at The Fiddle and Bow Music Hall to share our love of music, Southern folk art, and to promote local talent. If you are that local talent or musician, get in touch. We would love to hear from you. Just know, Hank Williams Sr. will be looking over your shoulder. </p>
         </div>
 
     </div>
+</div>
     
 </div> <!-- Closes "Content Text-Left"-->
 
