--- a/Calendar.html
+++ b/Calendar.html
@@ -101,7 +101,7 @@
          </div>
 
           <div class="col-md-4 show-2">
-            <img src="images/Country River Band.png" style="width: 100%" alt="Responsive image">
+            <img src="images/Helms October 25.png" style="width: 100%" alt="Responsive image">
             <h2>Colby T. Helms & The Virginia Creepers</h2>
             <h3>October 18th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
@@ -156,7 +156,7 @@
          </div>
 
     <div class="col-md-4 show-2">
-            <img src="images/Lowedermilk 121325.png" style="width: 100%" alt="Responsive image">
+            <img src="images/Chesnutt November 25.png" style="width: 100%" alt="Responsive image">
             <h2>Casey Chesnutt</h2>
             <h3>November 22nd, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
