--- a/About.html
+++ b/About.html
@@ -89,22 +89,22 @@
   <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-          <div class="col-md-4 show-1">
-            <img src="images/Frizzell 091325.png" style="width: 100%" alt="Responsive image">
-            <h2>Tess Frizzell & Bobby Tomberlin</h2>
-            <h3>September 13th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/country-music-royalty-tess-frizzell-w-bobby-tomberlin-tickets-1363767718959?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-         </div>
-
-           <div class="col-md-4 show-2">
+           <div class="col-md-4 show-1">
             <img src="images/Brian and Melanie 091825.png" style="width: 100%" alt="Responsive image">
             <h2>Brian Ashley Jones & Melanie Jean</h2>
             <h3>September 18th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $10</h3>
             <a href="https://www.eventbrite.com/e/an-evening-with-brian-ashley-jones-and-melanie-jean-tickets-1221658496449?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+         <div class="col-md-4 show-2">
+            <img src="images/Darian Poe.png" style="width: 100%" alt="Responsive image">
+            <h2>Darian Poe</h2>
+            <h3>September 19th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $5</h3>
+            <a href="https://www.eventbrite.com/e/darian-poe-tickets-1626855882739?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
     
     <div class="col-sm-4 never-know">
