--- a/Store.html
+++ b/Store.html
@@ -93,7 +93,7 @@
       <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
       <div class="row">
         
-          <div class="col-md-4 show-1">
+          <div class="col-sm-4 show-1">
             <img src="images/Helms October 25.png" style="width: 100%" alt="Responsive image">
             <h2>Colby T. Helms & The Virginia Creepers</h2>
             <h3>October 18th, 2025</h3>
@@ -102,7 +102,7 @@
             <a href="https://www.eventbrite.com/e/colby-t-helms-and-the-virginia-creepers-tickets-1689585799609?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
 
-          <div class="col-md-4 show-2">
+          <div class="col-sm-4 show-2">
             <img src="images/Country River Band.png" style="width: 100%" alt="Responsive image">
             <h2>Country River Band</h2>
             <h3>October 25th, 2025</h3>
