--- a/Store.html
+++ b/Store.html
@@ -125,17 +125,17 @@
   <h1>Folk Art by Justin Thomas Atkin</h1>
   <p>Sharing our passion for southern folk art means getting it into the hands of collectors. If that's you, we have art for sale. It's all original too and by Honea Path’s own Justin Thomas Atkin. You can reach out to us <a href="Contact.html" class="link-primary">here</a> and set up an appointment to visit our gallery at The Fiddle and Bow Music Hall or follow the link below to purchase art online. The link below takes you to a new page belonging to an art gallery. If you’d like to know more about the artwork of Justin Thomas Atkin, you can read an article <a href="https://www.andersonobserver.com/news/paintings-storytelling-bring-acclaim-to-local-artist">here</a> or watch a video interview <a href="https://www.youtube.com/watch?v=NjEpGTDzUik">here</a>.</p>
   <div class="row">
-    <div class="col-sm-4 art-1">
+    <div class="col-md-4 art-1">
       <img src="images/Home Page_Atkin Art.jpg" class="img-fluid" style="width: 100%" alt="Responsive image">
       <br><br>
       <p>"Some People Are Poor" - $125</p>
     </div>
-    <div class="col-sm-4 art-2">
+    <div class="col-md-4 art-2">
       <img src="images/Andy.png" class="img-fluid" style="width: 100%" alt="Responsive image">
       <br><br>
       <p>"Raising Our Kids w/ Andy Griffith" - $125</p>
     </div>
-    <div class="col-sm-4">
+    <div class="col-md-4">
       <div class="buy-art">
         <p>Do you want to buy some original southern folk art by Justin Thomas Atkin? Click on the link below.</p>
       </div>
