--- a/Contact.html
+++ b/Contact.html
@@ -108,22 +108,23 @@
   <H1>Upcoming Shows at The Fiddle & Bow Music Hall</H1>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-          <div class="col-md-4 show-1">
-            <img src="images/Helms October 25.png" style="width: 100%" alt="Responsive image">
-            <h2>Colby T. Helms & The Virginia Creepers</h2>
-            <h3>October 18th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $20</h3>
-            <a href="https://www.eventbrite.com/e/colby-t-helms-and-the-virginia-creepers-tickets-1689585799609?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-
-          <div class="col-md-4 show-2">
+       <div class="col-md-4 show-1">
             <img src="images/Country River Band.png" style="width: 100%" alt="Responsive image">
             <h2>Country River Band</h2>
             <h3>October 25th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $12</h3>
             <a href="https://www.eventbrite.com/e/country-river-band-tickets-1354260211749?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+        </div>
+        
+        <div class="col-md-4 show-2">
+            <img src="images/Childers 110825.jpg" style="width: 100%" alt="Responsive image">
+            <h2>David Childers & The Serpents</h2>
+            <h2>w/ Special Guest Cody Gentry</h2>
+            <h3>November 8th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/david-childers-and-the-serpents-w-cody-gentry-tickets-1363793365669?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
     
     <div class="col-sm-4 never-know">
