--- a/About.html
+++ b/About.html
@@ -89,16 +89,7 @@
   <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
   <div class="row"> <!-- Opens Upcoming Shows Row -->
 
-       <div class="col-md-4 show-1">
-            <img src="images/Country River Band.png" style="width: 100%" alt="Responsive image">
-            <h2>Country River Band</h2>
-            <h3>October 25th, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $12</h3>
-            <a href="https://www.eventbrite.com/e/country-river-band-tickets-1354260211749?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
-        
-        <div class="col-md-4 show-2">
+     <div class="col-md-4 show-1">
             <img src="images/Childers 110825.jpg" style="width: 100%" alt="Responsive image">
             <h2>David Childers & The Serpents</h2>
             <h2>w/ Special Guest Cody Gentry</h2>
@@ -107,6 +98,15 @@
             <h3>Tickets $20</h3>
             <a href="https://www.eventbrite.com/e/david-childers-and-the-serpents-w-cody-gentry-tickets-1363793365669?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
         </div>
+
+         <div class="col-md-4 show-2">
+            <img src="images/Tugalo 111425.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Tugalo Holler</h2>
+            <h3>November 14th, 2025</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $15</h3>
+            <a href="https://www.eventbrite.com/e/tugalo-holler-tickets-1411263179159?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
     
     <div class="col-sm-4 never-know">
       <p>You never know who might be on stage at The Fiddle and Bow Music Hall. It could be anyone from your friend’s local band to a Nashville A-List artist. We might be hosting local comedians to bring some laughs or other music or art-related events. We have a FREE bluegrass jam circle every Tuesday and occasionally $5 Dollar Friday events too. The events we host are one way we fulfill our mission of sharing our love of music, southern folk art, and promoting local talent. See our full calendar <a href="Calendar.html" class="link-primary">here</a> for more information. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
