--- a/Store.html
+++ b/Store.html
@@ -93,23 +93,23 @@
       <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
       <div class="row">
         
-       <div class="col-sm-4 show-1">
-            <img src="images/Tugalo 111425.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Tugalo Holler</h2>
-            <h3>November 14th, 2025</h3>
+      <div class="col-md-4 show-1">
+            <img src="images/Chesnutt November 25.png" style="width: 100%" alt="Responsive image">
+            <h2>Casey Chesnutt</h2>
+            <h3>November 22nd, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $15</h3>
-            <a href="https://www.eventbrite.com/e/tugalo-holler-tickets-1411263179159?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+            <h3>Tickets $30</h3>
+            <a href="https://www.eventbrite.com/e/casey-chesnutt-an-evening-w-country-music-royalty-tickets-1689647243389?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
-          <div class="col-sm-4 show-2">
-            <img src="images/Pickens 111525.jpg" style="width: 100%" alt="Responsive image">
-            <h2>The Pickens Creek Band</h2>
-            <h3>November 15th, 2025</h3>
+        <div class="col-md-4 show-2">
+            <img src="images/Lowedermilk 121325.png" style="width: 100%" alt="Responsive image">
+            <h2>The Edgar Loudermilk Band</h2>
+            <h3>December 13th, 2025</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $15</h3>
-            <a href="https://www.eventbrite.com/e/pickens-creek-band-tickets-1407880110309?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-        </div>
+            <h3>Tickets $20</h3>
+            <a href="https://www.eventbrite.com/e/award-winning-bluegrass-with-the-edgar-loudermilk-band-tickets-1626861178579?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
         
           <div class="col-sm-4 never-know">
             <div class="">
