--- a/Calendar.html
+++ b/Calendar.html
@@ -82,7 +82,7 @@
 
     <div class="row content"> 
 
-        <div class="col-md-4 show-2">
+        <div class="col-md-4 show-1">
             <img src="images/Chesnutt November 25.png" style="width: 100%" alt="Responsive image">
             <h2>Casey Chesnutt</h2>
             <h3>November 22nd, 2025</h3>
@@ -101,9 +101,21 @@
          </div>
 
         <div class="col-md-4 show-3">
+            <img src="images/Folkfest SM Ad.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Dancing Goats Folfest</h2>
+            <h3>April 11th, 2026</h3>
+            <h3>TBD</h3>
+            <h3>Free Admission</h3>  
+         </div>
+
+<div class="row content">
+    
+        <div class="col-md-4 show-3">
             <h2>Your Band Could Be Up Next!</h2>
             <p>If you are interested in getting on stage at The Fiddle and Bow Music Hall, you can contact us <a class="link-opacity-100-hover" href="Contact.html">here.</a> If you have questions, you can go to our FAQ page <a class="link-opacity-100-hover" href="FAQ.html">here</a> and learn more. It is our mission at The Fiddle and Bow Music Hall to share our love of music, Southern folk art, and to promote local talent. If you are that local talent or musician, get in touch. We would love to hear from you. Just know, Hank Williams Sr. will be looking over your shoulder. </p>
         </div>
+
+</div>
     
 </div> <!-- Closes "Content Text-Left"-->
 
