--- a/Calendar.html
+++ b/Calendar.html
@@ -102,11 +102,13 @@
 
         <div class="col-md-4 show-3">
             <img src="images/Folkfest SM Ad.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Dancing Goats Folfest</h2>
+            <h2>Dancing Goats Folkfest</h2>
             <h3>April 11th, 2026</h3>
             <h3>TBD</h3>
             <h3>Free Admission</h3>  
          </div>
+
+    </div>
 
 <div class="row content">
     
