--- a/Calendar.html
+++ b/Calendar.html
@@ -82,15 +82,6 @@
 
     <div class="row content"> 
 
-        <div class="col-md-4 show-1">
-            <img src="images/Chesnutt November 25.png" style="width: 100%" alt="Responsive image">
-            <h2>Casey Chesnutt</h2>
-            <h3>November 22nd, 2025</h3>
-            <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $30</h3>
-            <a href="https://www.eventbrite.com/e/casey-chesnutt-an-evening-w-country-music-royalty-tickets-1689647243389?aff=ebdsoporgprofile" class="btn custom-btn" role="button">Tickets</a>  
-         </div>
-
         <div class="col-md-4 show-2">
             <img src="images/Lowedermilk 121325.png" style="width: 100%" alt="Responsive image">
             <h2>The Edgar Loudermilk Band</h2>
@@ -101,16 +92,34 @@
          </div>
 
         <div class="col-md-4 show-3">
+            <img src="images/Browders.jpg" style="width: 100%" alt="Responsive image">
+            <h2>The Browders</h2>
+            <h3>January 16th, 2026</h3>
+            <h3><Red Door 6PM | Show 7PM></h3>
+            <h3>Tickets $25</h3> 
+            <a href="https://www.eventbrite.com/e/the-browders-tickets-1975358955812?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+        <div class="col-md-4 show-3">
+            <img src="images/A Differnt Thread.png" style="width: 100%" alt="Responsive image">
+            <h2>A Different Thread</h2>
+            <h3>January 17th, 2026</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3>  
+            <a href="https://www.eventbrite.com/e/a-different-thread-tickets-1975363561588?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a> 
+         </div>
+
+    </div>
+
+<div class="row content">
+
+      <div class="col-md-4 show-3">
             <img src="images/Folkfest SM Ad.jpg" style="width: 100%" alt="Responsive image">
             <h2>Dancing Goats Folkfest</h2>
             <h3>April 11th, 2026</h3>
             <h3>TBD</h3>
             <h3>Free Admission</h3>  
          </div>
-
-    </div>
-
-<div class="row content">
     
         <div class="col-md-4 show-3">
             <h2>Your Band Could Be Up Next!</h2>
