--- a/Calendar.html
+++ b/Calendar.html
@@ -101,12 +101,41 @@
          </div>
 
         <div class="col-md-4 show-3">
+            <img src="images/" style="width: 100%" alt="Responsive image">
+            <h2>Podunk Rabmlers</h2>
+            <h3>January 17th, 2026</h3>
+            <h3><Red Door 6PM | Show 7PM></h3>
+            <h3>Tickets $15</h3> 
+            <a href="https://www.eventbrite.com/e/podunk-ramblers-tickets-1975359414183?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+    </div>
+
+         <div class="col-md-4 show-3">
+            <img src="images/Duo 013126.png" style="width: 100%" alt="Responsive image">
+            <h2>Podunk Rabmlers</h2>
+            <h3>January 31st, 2026</h3>
+            <h3><Red Door 6PM | Show 7PM></h3>
+            <h3>Tickets $10</h3> 
+            <a href="https://www.eventbrite.com/e/angela-easterling-duo-tickets-1975360715074?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+         <div class="col-md-4 show-3">
+            <img src="images/Linda Gail Lewis 022126.png" style="width: 100%" alt="Responsive image">
+            <h2>Linda Gail Lewis</h2>
+            <h3>January 31st, 2026</h3>
+            <h3><Red Door 6PM | Show 7PM></h3>
+            <h3>Tickets $30</h3> 
+            <a href="https://www.eventbrite.com/e/linda-gail-lewis-queen-of-rockabilly-tickets-1976779443529?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+        <div class="col-md-4 show-3">
             <img src="images/Folkfest SM Ad.jpg" style="width: 100%" alt="Responsive image">
             <h2>Dancing Goats Folkfest</h2>
             <h3>April 11th, 2026</h3>
             <h3>TBD</h3>
             <h3>Free Admission</h3>  
-         </div>
+        </div>
   
     </div>
 
