--- a/Calendar.html
+++ b/Calendar.html
@@ -111,6 +111,8 @@
 
     </div>
 
+    <div class="row content">
+
          <div class="col-md-4 show-3">
             <img src="images/Duo 013126.png" style="width: 100%" alt="Responsive image">
             <h2>Podunk Rabmlers</h2>
