--- a/Calendar.html
+++ b/Calendar.html
@@ -95,7 +95,7 @@
             <img src="images/Browders.jpg" style="width: 100%" alt="Responsive image">
             <h2>The Browders</h2>
             <h3>January 16th, 2026</h3>
-            <h3><Red Door 6PM | Show 7PM></h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $25</h3> 
             <a href="https://www.eventbrite.com/e/the-browders-tickets-1975358955812?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
@@ -104,7 +104,7 @@
             <img src="images/" style="width: 100%" alt="Responsive image">
             <h2>Podunk Rabmlers</h2>
             <h3>January 17th, 2026</h3>
-            <h3><Red Door 6PM | Show 7PM></h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $15</h3> 
             <a href="https://www.eventbrite.com/e/podunk-ramblers-tickets-1975359414183?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
@@ -117,7 +117,7 @@
             <img src="images/Duo 013126.png" style="width: 100%" alt="Responsive image">
             <h2>Podunk Rabmlers</h2>
             <h3>January 31st, 2026</h3>
-            <h3><Red Door 6PM | Show 7PM></h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $10</h3> 
             <a href="https://www.eventbrite.com/e/angela-easterling-duo-tickets-1975360715074?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
@@ -126,7 +126,7 @@
             <img src="images/Linda Gail Lewis 022126.png" style="width: 100%" alt="Responsive image">
             <h2>Linda Gail Lewis</h2>
             <h3>January 31st, 2026</h3>
-            <h3><Red Door 6PM | Show 7PM></h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $30</h3> 
             <a href="https://www.eventbrite.com/e/linda-gail-lewis-queen-of-rockabilly-tickets-1976779443529?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
@@ -135,13 +135,22 @@
             <img src="images/Folkfest SM Ad.jpg" style="width: 100%" alt="Responsive image">
             <h2>Dancing Goats Folkfest</h2>
             <h3>April 11th, 2026</h3>
-            <h3>TBD</h3>
+            <h3>Festival Begins 9AM</h3>
             <h3>Free Admission</h3>  
         </div>
   
     </div>
 
 <div class="row content">
+
+     <div class="col-md-4 show-3">
+            <img src="images/Fulks 033026.png" style="width: 100%" alt="Responsive image">
+            <h2>Robbie Fulks</h2>
+            <h3>March 3rd, 2026</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3> 
+            <a href="https://www.eventbrite.com/e/robbie-fulks-tickets-1975361338940?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
     
         <div class="col-md-4 show-3">
             <h2>Your Band Could Be Up Next!</h2>
