--- a/Calendar.html
+++ b/Calendar.html
@@ -143,13 +143,22 @@
 
 <div class="row content">
 
-     <div class="col-md-4 show-3">
+         <div class="col-md-4 show-3">
             <img src="images/Fulks 033026.png" style="width: 100%" alt="Responsive image">
             <h2>Robbie Fulks</h2>
             <h3>March 3rd, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $20</h3> 
             <a href="https://www.eventbrite.com/e/robbie-fulks-tickets-1975361338940?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+         <div class="col-md-4 show-3">
+            <img src="images/Harrington 050126.png" style="width: 100%" alt="Responsive image">
+            <h2>Vilai Harrington & The Hamptones</h2>
+            <h3>May 1st, 2026</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $12</h3> 
+            <a href="https://www.eventbrite.com/e/vilai-harrington-the-hamptones-tickets-1975362397105?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
     
         <div class="col-md-4 show-3">
