--- a/Calendar.html
+++ b/Calendar.html
@@ -115,7 +115,7 @@
 
          <div class="col-md-4 show-3">
             <img src="images/Duo 013126.png" style="width: 100%" alt="Responsive image">
-            <h2>Podunk Rabmlers</h2>
+            <h2>Angela Easterling Duo</h2>
             <h3>January 31st, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $10</h3> 
