--- a/Calendar.html
+++ b/Calendar.html
@@ -131,18 +131,6 @@
             <a href="https://www.eventbrite.com/e/linda-gail-lewis-queen-of-rockabilly-tickets-1976779443529?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
-        <div class="col-md-4 show-3">
-            <img src="images/Folkfest SM Ad.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Dancing Goats Folkfest</h2>
-            <h3>April 11th, 2026</h3>
-            <h3>Festival Begins 9AM</h3>
-            <h3>Free Admission</h3>  
-        </div>
-  
-    </div>
-
-<div class="row content">
-
          <div class="col-md-4 show-3">
             <img src="images/Fulks 030326.png" style="width: 100%" alt="Responsive image">
             <h2>Robbie Fulks</h2>
@@ -151,6 +139,27 @@
             <h3>Tickets $20</h3> 
             <a href="https://www.eventbrite.com/e/robbie-fulks-tickets-1975361338940?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
+  
+    </div>
+
+<div class="row content">
+
+         <div class="col-md-4 show-3">
+            <img src="images/" style="width: 100%" alt="Responsive image">
+            <h2>Wayne "The Train" Hancock</h2>
+            <h3>March 3rd, 2026</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $30</h3> 
+            <a href="https://www.eventbrite.com/e/wayne-hancock-tickets-1975361612759?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+        <div class="col-md-4 show-3">
+            <img src="images/Folkfest SM Ad.jpg" style="width: 100%" alt="Responsive image">
+            <h2>Dancing Goats Folkfest</h2>
+            <h3>April 11th, 2026</h3>
+            <h3>Festival Begins 9AM</h3>
+            <h3>Free Admission</h3>  
+        </div>
 
          <div class="col-md-4 show-3">
             <img src="images/Harrington 050126.png" style="width: 100%" alt="Responsive image">
@@ -159,6 +168,28 @@
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $12</h3> 
             <a href="https://www.eventbrite.com/e/vilai-harrington-the-hamptones-tickets-1975362397105?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+
+</div>
+
+    <div class="row content">
+
+        <div class="col-md-4 show-3">
+            <img src="images/Different Thread 050126.png" style="width: 100%" alt="Responsive image">
+            <h2>A Different Thread</h2>
+            <h3>May 9th, 2026</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3> 
+            <a href="https://www.eventbrite.com/e/a-different-thread-tickets-1975363561588?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+         </div>
+    
+         <div class="col-md-4 show-3">
+            <img src="images/Different Thread 050126.png" style="width: 100%" alt="Responsive image">
+            <h2>Vanden Landers</h2>
+            <h3>July 18th, 2026</h3>
+            <h3>Red Door 6PM | Show 7PM</h3>
+            <h3>Tickets $20</h3> 
+            <a href="https://www.eventbrite.com/e/vaden-landers-tickets-1976784408379?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
     
         <div class="col-md-4 show-3">
