--- a/Calendar.html
+++ b/Calendar.html
@@ -184,7 +184,7 @@
          </div>
     
          <div class="col-md-4 show-3">
-            <img src="images/Different Thread 050126.png" style="width: 100%" alt="Responsive image">
+            <img src="images/Vaden Landers 071826.png" style="width: 100%" alt="Responsive image">
             <h2>Vanden Landers</h2>
             <h3>July 18th, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
