--- a/Calendar.html
+++ b/Calendar.html
@@ -134,7 +134,7 @@
         <div class="col-md-4 show-3">
             <img src="images/Hancock 031226.png" style="width: 100%" alt="Responsive image">
             <h2>Wayne "The Train" Hancock</h2>
-            <h3>March 12rd, 2026</h3>
+            <h3>March 12th, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $30</h3> 
             <a href="https://www.eventbrite.com/e/wayne-hancock-tickets-1975361612759?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
