--- a/Calendar.html
+++ b/Calendar.html
@@ -92,7 +92,7 @@
          </div>
 
         <div class="col-md-4 show-3">
-            <img src="images/Podunk.jpg" style="width: 100%" alt="Responsive image">
+            <img src="images/Podunk Resize.png" style="width: 100%" alt="Responsive image">
             <h2>Podunk Rabmlers</h2>
             <h3>January 17th, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
@@ -114,7 +114,7 @@
     <div class="row content">
 
          <div class="col-md-4 show-3">
-            <img src="images/Linda Gail Lewis 022126.png" style="width: 100%" alt="Responsive image">
+            <img src="images/Lewis Resize.png" style="width: 100%" alt="Responsive image">
             <h2>Linda Gail Lewis</h2>
             <h3>January 31st, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
@@ -162,7 +162,7 @@
          </div>
 
           <div class="col-md-4 show-3">
-            <img src="images/Different Thread 050126.png" style="width: 100%" alt="Responsive image">
+            <img src="images/Thread Resize.jpg" style="width: 100%" alt="Responsive image">
             <h2>A Different Thread</h2>
             <h3>May 9th, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
