--- a/Calendar.html
+++ b/Calendar.html
@@ -93,7 +93,7 @@
 
         <div class="col-md-4 show-3">
             <img src="images/Podunk Resize.png" style="width: 100%" alt="Responsive image">
-            <h2>Podunk Rabmlers</h2>
+            <h2>Podunk Ramblers</h2>
             <h3>January 17th, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $15</h3> 
@@ -150,6 +150,7 @@
             <h3>April 11th, 2026</h3>
             <h3>Festival Begins 9AM</h3>
             <h3>Free Admission</h3>  
+            <a href="https://www.facebook.com/DancingGoatsFolkFest" class="btn custom-btn" role="button">Learn More</a> 
         </div>
 
          <div class="col-md-4 show-3">
