--- a/About.html
+++ b/About.html
@@ -100,7 +100,7 @@
 
         <div class="col-md-4 show-3">
             <img src="images/Podunk.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Podunk Rabmlers</h2>
+            <h2>Podunk Ramblers</h2>
             <h3>January 17th, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $15</h3> 
