--- a/Calendar.html
+++ b/Calendar.html
@@ -116,6 +116,7 @@
          <div class="col-md-4 show-3">
             <img src="images/Lewis Resize.png" style="width: 100%" alt="Responsive image">
             <h2>Linda Gail Lewis</h2>
+            <h2>W/ Sparkle City Rockets</h2>
             <h3>January 31st, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
             <h3>Tickets $30</h3> 
