--- a/Store.html
+++ b/Store.html
@@ -93,22 +93,23 @@
       <p>Sharing our passion for music means keeping musicians on The Fiddle and Bow Music Hall’s stage. We are constantly booking new events and have artists of several genres from all over the country signing up to perform under the watchful eye of Hank Williams. You can see our full calendar <a href="Calendar.html" class="link-primary">here</a>. If you have questions, you can contact us <a href="Contact.html" class="link-primary">here</a>.</p>
       <div class="row">
         
-        <div class="col-md-4 show-3">
-            <img src="images/Browders.jpg" style="width: 100%" alt="Responsive image">
-            <h2>The Browders</h2>
-            <h3>January 16th, 2026</h3>
+        <div class="col-md-4 show-1">
+            <img src="images/Duo 013126.png" style="width: 100%" alt="Responsive image">
+            <h2>Angela Easterling Duo</h2>
+            <h3>January 31st, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $25</h3> 
-            <a href="https://www.eventbrite.com/e/the-browders-tickets-1975358955812?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+            <h3>Tickets $10</h3> 
+            <a href="https://www.eventbrite.com/e/angela-easterling-duo-tickets-1975360715074?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
 
-        <div class="col-md-4 show-3">
-            <img src="images/Podunk.jpg" style="width: 100%" alt="Responsive image">
-            <h2>Podunk Ramblers</h2>
-            <h3>January 17th, 2026</h3>
+         <div class="col-md-4 show-2">
+            <img src="images/Lewis Resize.png" style="width: 100%" alt="Responsive image">
+            <h2>Linda Gail Lewis</h2>
+            <h2>W/ Sparkle City Rockets</h2>
+            <h3>January 31st, 2026</h3>
             <h3>Red Door 6PM | Show 7PM</h3>
-            <h3>Tickets $15</h3> 
-            <a href="https://www.eventbrite.com/e/podunk-ramblers-tickets-1975359414183?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
+            <h3>Tickets $30</h3> 
+            <a href="https://www.eventbrite.com/e/linda-gail-lewis-queen-of-rockabilly-tickets-1976779443529?aff=ebdssbdestsearch" class="btn custom-btn" role="button">Tickets</a>  
          </div>
         
           <div class="col-sm-4 never-know">
